
** 1.3.5 released on 2004-12-30

2004-12-29  Petr Stehlik  <pstehlik@sophics.cz>
* atari_x11.c: Ken Zalewski contributed a patch for keyboard handling
  that fixes a segfault (XLookupString was called even if the event
  was not keyboard related).

* atari_x11.c: after looking into the keyboard handling under X11
  I realized that keyboard auto-repeat was not working at all.
  I tried to fix it by keeping the keycode status persistent.
  It seems to work in non-XVIEW/non-MOTIF version.


2004-12-28  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c: Daniel Serpell contributed a patch for keyboard handling
  that makes the Atari800 keyboard working on non-US keyboard layouts
  simply by using the Unicode values of the keys (instead of scancodes).
  Also, keys Control-0 to 9 and Control-A to Z were added. The "Atari"
  key is mapped to the left Windows key, the Caps-toggle key is mapped
  to the right Windows key and the Atari Shift+F1 and Shift+F2 keys
  are mapped to host's PageUp and PageDown keys (as this is the function
  of those keys in the Atari-XL OS).


** 1.3.4 released on 2004-12-27

2004-11-26  Petr Stehlik  <pstehlik@sophics.cz>
* rt-config.c: fixed many possible buffer overflows that were dangerous if
  atari800 was installed suid root. Thanks for analysis go to Adam Zabrocki.

* svgalib.c: fixes a compilation error when compiling with GCC 3.4.x
  (compiler chokes on label at end of block). Thank for patch to Andrew Church

2004-11-17  Perry McFarlane  <perry_m@fastmail.fm>
* antic.c: Fix for Timeslip game.  Newcycleexact dmactl change bug.

2004-09-24  Sebastian Bauer
* ui_basic.c: fixed NULL pointer access in file dialog which happened if there
  were no files in the selected directory.

* amiga/*: updated


** 1.3.3 released

2004-08-08  Petr Stehlik  <pstehlik@sophics.cz>
* various files: updated for 1.3.3 release


2004-08-05  Christian Groessler <cpg@aladdin.de>
* atari_x11.c: adds the left ctrl key as joystick button if "-keypad" is